Reviewed sample sentence.

--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1355,17 +1355,17 @@
      "text": [
       "INFO:tensorflow:Restoring parameters from checkpoints/dev\n",
       "Input\n",
-      "  Word Ids:      [218, 230, 155, 184, 171, 85, 98, 99, 230, 112, 227, 123, 118, 193]\n",
-      "  English Words: ['california', 'is', 'quiet', 'during', 'winter', ',', 'and', 'it', 'is', 'never', 'cold', 'in', 'october', '.']\n",
+      "  Word Ids:      [218, 230, 112, 213, 184, 171, 85, 98, 99, 230, 112, 227, 123, 148, 193]\n",
+      "  English Words: ['california', 'is', 'never', 'rainy', 'during', 'winter', ',', 'and', 'it', 'is', 'never', 'cold', 'in', 'june', '.']\n",
       "\n",
       "Prediction\n",
-      "  Word Ids:      [78, 291, 6, 150, 42, 293, 322, 288, 189, 152, 235, 162, 193, 172, 142, 269, 329, 1]\n",
-      "  French Words: california est généralement calme pendant l' hiver , et il ne fait jamais froid en octobre . <EOS>\n"
+      "  Word Ids:      [78, 291, 193, 117, 42, 293, 322, 288, 189, 152, 235, 162, 193, 172, 142, 171, 329, 1]\n",
+      "  French Words: california est jamais pluvieux pendant l' hiver , et il ne fait jamais froid en juin . <EOS>\n"
      ]
     }
    ],
    "source": [
-    "translate_sentence = 'california is quiet during winter , and it is never cold in october .'\n",
+    "translate_sentence = 'california is never rainy during winter , and it is never cold in june .'\n",
     "\n",
     "\n",
     "\"\"\"\n",
